--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total users: 93522\n",
+      "Users with zero interactions: 0\n",
+      "Min interactions: 1, Max interactions: 6643\n",
+      "Average interactions: 8.52\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Datasets.dataset import SeqRecDataset\n",
+    "import json\n",
+    "\n",
+    "dataset_path = \"/home/jy1559/Mar2025_Module/Datasets/Retail_Rocket/interactions_revised.json\"\n",
+    "item_metadata_path = \"/home/jy1559/Mar2025_Module/Datasets/Retail_Rocket/item_metadata.json\"\n",
+    "ds = SeqRecDataset(dataset_path, item_metadata_path, use_llm=False)\n",
+    "\n",
+    "total_users = len(ds)\n",
+    "zero_interactions = 0\n",
+    "min_int = float('inf')\n",
+    "max_int = 0\n",
+    "total_int = 0\n",
+    "\n",
+    "for user in ds:\n",
+    "    valid_count = 0\n",
+    "    for session in user['sessions']:\n",
+    "        for inter in session:\n",
+    "            if inter['item_id'] != -1:  # -1이면 padding으로 처리한 경우라 가정\n",
+    "                valid_count += 1\n",
+    "    total_int += valid_count\n",
+    "    if valid_count == 0:\n",
+    "        zero_interactions += 1\n",
+    "    min_int = min(min_int, valid_count)\n",
+    "    max_int = max(max_int, valid_count)\n",
+    "\n",
+    "print(f\"Total users: {total_users}\")\n",
+    "print(f\"Users with zero interactions: {zero_interactions}\")\n",
+    "print(f\"Min interactions: {min_int}, Max interactions: {max_int}\")\n",
+    "print(f\"Average interactions: {total_int / total_users:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -384,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "first",
    "language": "python",
    "name": "python3"
   },
@@ -398,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
