--- a/Datasets/negative_sampling.ipynb
+++ b/Datasets/negative_sampling.ipynb
@@ -367,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "first",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
