--- a/Datasets/norm_timestamp.ipynb
+++ b/Datasets/norm_timestamp.ipynb
@@ -54,7 +54,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "first",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
